# project-hail-mary

./: .gitignore  pyproject.toml
src/ai_graffiti/: config.py  contracts.py  gesture_engine.py  main.py  painting_engine.py
src/ai_graffiti_wall/: __init__.py
