[project]
name = "ai-graffiti-wall"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "chetanuchiha16", email = "chetan16ck@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "mediapipe>=0.10.33",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
]

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"
